assets/css/style.css
/*-----------------------------------------------------------------------------------

    Template Name: Unfold - Personal Resume & CV Template
    Template URI: site.com
    Description: Unfold Personal Resume & CV Template
    Author: Uideck
    Author URI: https://uideck.com/
    Support: https://uideck.com/support/
    Version: 1.0

-----------------------------------------------------------------------------------

    CSS INDEX
    ===================

    1.COMMON
	2.HEADER
    3.ABOUT
    4.SERVICES
    4.CALL TO ACTION
    5.WORK
    6.PRICING
    7.BLOG
    8.CONTACT
    9.FOOTER
    10.PAGE BANNER
    10.SINGLE BLOG PAGE

-----------------------------------------------------------------------------------*/
/*===========================
    1. COMMON css 
===========================*/
@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800");
body {
  font-family: "Poppins", sans-serif;
  font-weight: normal;
  font-style: normal;
  overflow-x: hidden;
  color: #8a8fa3; }

* {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

img {
  max-width: 100%; }

img.logo{
  max-width: 60px; }
.link-color{
  color:#007bff;
}
.text-color{
  color:#8a8fa3;
}
a:focus,
input:focus,
textarea:focus,
button:focus {
  text-decoration: none;
  outline: none; }

a:focus,
a:hover {
  text-decoration: none; }

i,
span,
a {
  display: inline-block; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  color: #32333c;
  margin: 0px; }

h1 {
  font-size: 60px; }

h2 {
  font-size: 36px; }

h3 {
  font-size: 28px; }

h4 {
  font-size: 22px; }

h5 {
  font-size: 18px; }

h6 {
  font-size: 16px; }

ul, ol {
  margin: 0px;
  padding: 0px;
  list-style-type: none; }

p {
  font-size: 16px;
  font-weight: 400;
  line-height: 28px;
  color: #8a8fa3;
  margin: 0px; }
  @media (max-width: 767px) {
    p {
      font-size: 15px; } }

.bg_cover {
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%; }

/*===== All Button Style =====*/
.main-btn {
  display: inline-block;
  font-weight: 500;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid #274C77;
  padding: 0 40px;
  font-size: 15px;
  line-height: 48px;
  border-radius: 50px;
  color: #fff;
  cursor: pointer;
  z-index: 5;
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
  -webkit-box-shadow: 0px 5px 8px 0px rgba(54, 111, 133, 0.55);
  -moz-box-shadow: 0px 5px 8px 0px rgba(54, 111, 133, 0.55);
  box-shadow: 0px 5px 8px 0px rgba(54, 111, 133, 0.55);
  background-color: #274C77;
  text-transform: uppercase; }
  .main-btn:hover {
    background-color: #fff;
    color: #274C77;
    border-color: #274C77; }
  .main-btn.main-btn-2 {
    background-color: transparent;
    color: #fff;
    border-color: #fff;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none; }
    .main-btn.main-btn-2:hover {
      background-color: #274C77;
      color: #fff;
      border-color: #274C77; }

/*===== All Section Title Style =====*/
.section-title .title + p {
  animation-duration: 2s;
  animation-name: changewidth;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}
.section-title .title {
  font-weight: 700;
  font-size: 45px;
  color: #000;
  animation-duration: 2s;
  animation-name: changewidth;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  padding-bottom: 20px; }
  @media (max-width: 767px) {
    .section-title .title {
      font-size: 30px; } }

/*===== All Preloader Style =====*/
.preloader {
  /* Body Overlay */
  position: fixed;
  top: 0;
  left: 0;
  display: table;
  height: 100%;
  width: 100%;
  /* Change Background Color */
  background: #fff;
  z-index: 99999; }
  .preloader .loader_34 {
    display: table-cell;
    vertical-align: middle;
    text-align: center; }
    .preloader .loader_34 .ytp-spinner {
      position: absolute;
      left: 50%;
      top: 50%;
      width: 64px;
      margin-left: -32px;
      z-index: 18;
      pointer-events: none; }
      .preloader .loader_34 .ytp-spinner .ytp-spinner-container {
        pointer-events: none;
        position: absolute;
        width: 100%;
        padding-bottom: 100%;
        top: 50%;
        left: 50%;
        margin-top: -50%;
        margin-left: -50%;
        -webkit-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
        -moz-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
        -o-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
        animation: ytp-spinner-linspin 1568.23529647ms linear infinite; }
        .preloader .loader_34 .ytp-spinner .ytp-spinner-container .ytp-spinner-rotator {
          position: absolute;
          width: 100%;
          height: 100%;
          -webkit-animation: ytp-spinner-easespin 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
          -moz-animation: ytp-spinner-easespin 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
          -o-animation: ytp-spinner-easespin 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
          animation: ytp-spinner-easespin 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both; }
          .preloader .loader_34 .ytp-spinner .ytp-spinner-container .ytp-spinner-rotator .ytp-spinner-left {
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            overflow: hidden;
            right: 50%; }
/* ... */

